# booksim2

./: .gitignore  Makefile  Makefile.am  README.md  batchtrafficmanager.cpp  booksim.py  booksim2.cc  booksim2.h  booksimBridge.cc  booksimBridge.h  booksimInterface.cc  booksimInterface.h  booksim_config.cpp  booksim_interconnect.cpp  booksim_interconnect.hpp  booksim_wrapper.cpp  booksim_wrapper.hpp  booksiminterconnect_fwd.hpp  buffer.cpp  flit.cpp  flit.hpp  globals.hpp  lex.yy.c  main.cpp  routefunc.hpp  tracetrafficmanager.cpp  tracetrafficmanager.hpp  trafficmanager.cpp  trafficmanager.hpp
networks/: cmesh.cpp  dragonfly.cpp  flatfly_onchip.cpp  flatfly_onchip.hpp  network.cpp  network.hpp
power/: buffer_monitor.cpp  power_module.cpp  power_module.hpp  switch_monitor.cpp
routers/: event_router.cpp  event_router.hpp  iq_router.cpp  router.cpp
src/: .gitignore  Makefile  batchtrafficmanager.cpp  batchtrafficmanager.hpp  booksim_config.cpp  buffer.cpp  buffer.hpp  buffer_state.cpp  buffer_state.hpp  channel.hpp  flit.cpp  flit.hpp  flitchannel.cpp  globals.hpp  main.cpp  routefunc.cpp  traffic.cpp  traffic.hpp  trafficmanager.cpp  trafficmanager.hpp  vc.cpp
src/allocators/: separable_output_first.cpp
src/learning/: dgb.cpp  dgb.hpp
src/networks/: dragonfly.cpp  dragonfly.hpp  flatfly_onchip.cpp  flatfly_onchip.hpp  kncube.cpp  kncube.hpp
src/routers/: chaos_router.cpp  chaos_router.hpp  event_router.hpp  iq_router.cpp  iq_router.hpp  router.hpp
src/usernet/: 2d_flatfly_ml  dragonfly_ml  flatfly_ml
